# vad-audio-input

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run.sh
tests/: __init__.py  test_naming.py  test_segmentation.py
vad_audio_input/: __init__.py  __main__.py  audio_io.py  cli.py  i18n.py  logging_setup.py  naming.py  pipeline.py  segmentation.py  types.py
vad_audio_input/vad/: __init__.py  base.py  silero.py
